# zaplib

./: .gitignore  Cargo.toml  Dockerfile-website  LICENSE-APACHE  LICENSE-MIT  LICENSES-THIRD-PARTY  README.md  app.json  heroku.yml  rust-toolchain.toml  rustfmt.toml  workspace.code-workspace  zaplib.code-workspace
.github/workflows/: ci.yaml
zaplib/cargo-zaplib/: Cargo.toml
zaplib/cargo-zaplib/src/: build.rs  build_npm_package.rs  cmd.rs  install_deps.rs  main.rs  serve.rs
zaplib/ci/: Cargo.toml
zaplib/ci/src/: cmd.rs  main.rs
zaplib/components/: Cargo.toml  README.md
zaplib/components/src/: arrow_pointer.rs  axis.rs  background.rs  button.rs  chart.rs  checkbox.rs  desktopwindow.rs  dock.rs  drawlines3d.rs  drawpoints3d.rs  floatslider.rs  foldcaption.rs  fps_counter.rs  geometry3d.rs  lib.rs  list.rs  popover.rs  scrollshadow.rs  scrollview.rs  skybox.rs  splitter.rs  tab.rs  tabcontrol.rs  textbuffer.rs  textcursor.rs  texteditor.rs  textinput.rs  tokentype.rs  viewport3d.rs
zaplib/components/src/internal/: buttonlogic.rs  desktopbutton.rs  mod.rs  scrollbar.rs  tabclose.rs
zaplib/docs/: book.toml
zaplib/examples/example_bigedit/: Cargo.toml  index.html
zaplib/examples/example_bigedit/http/: Cargo.toml
zaplib/examples/example_bigedit/http/src/: channel.rs  digest.rs  httputil.rs  lib.rs  websocket.rs
zaplib/examples/example_bigedit/hub/: Cargo.toml
zaplib/examples/example_bigedit/hub/src/: httpserver.rs  hubbuilder.rs  hubclient.rs  hubmsg.rs  hubrouter.rs  hubserver.rs  hubui.rs  lib.rs  process.rs  wasmstrip.rs
zaplib/examples/example_bigedit/macrolib/: Cargo.toml
zaplib/examples/example_bigedit/macrolib/src/: lib.rs
zaplib/examples/example_bigedit/microserde/: Cargo.toml
zaplib/examples/example_bigedit/microserde/derive/: Cargo.toml
zaplib/examples/example_bigedit/microserde/derive/src/: derive_bin.rs  derive_json.rs  derive_ron.rs  lib.rs
zaplib/examples/example_bigedit/microserde/src/: lib.rs  serde_bin.rs  serde_json.rs  serde_ron.rs  toml.rs
zaplib/examples/example_bigedit/src/: builder.rs  buildmanager.rs  codeicon.rs  colorpicker.rs  fieldworld.rs  fileeditor.rs  filepanel.rs  filetree.rs  homepage.rs  itemdisplay.rs  jseditor.rs  keyboard.rs  listanims.rs  loglist.rs  main.rs  makepadapp.rs  makepadstorage.rs  makepadwindow.rs  mprstokenizer.rs  plaineditor.rs  rusteditor.rs  searchindex.rs  searchresults.rs  treeworld.rs  worldview.rs
zaplib/examples/test_shader_2d_primitives/: Cargo.toml  index.html
zaplib/examples/test_shader_2d_primitives/src/: main.rs
zaplib/main/: Cargo.toml  README.md  build.rs
zaplib/main/bind/cef-sys/: Cargo.toml  README.md  build.rs  wrapper.h
zaplib/main/bind/cef-sys/src/: lib.rs
zaplib/main/bind/glx-sys/: Cargo.toml  README.md  build.rs
zaplib/main/bind/glx-sys/src/: bindings.rs  lib.rs
zaplib/main/bind/objc-sys/: Cargo.toml  README.md  build.rs
zaplib/main/bind/objc-sys/src/: declare.rs  encode.rs  lib.rs  macros.rs  malloc_buf.rs  runtime.rs  test_utils.rs
zaplib/main/bind/objc-sys/src/message/: gnustep.rs  mod.rs  verify.rs
zaplib/main/bind/objc-sys/src/message/apple/: arm.rs  mod.rs  x86.rs  x86_64.rs
zaplib/main/bind/objc-sys/src/rc/: autorelease.rs  mod.rs  strong.rs  weak.rs
zaplib/main/bind/x11-sys/: Cargo.toml  README.md  build.rs
zaplib/main/bind/x11-sys/src/: bindings.rs
zaplib/main/cef/: Cargo.toml  README.md
zaplib/main/cef/src/: browser.rs  browser_host.rs  frame.rs  lib.rs  menu_model.rs  process_message.rs  ptr.rs  settings.rs  thread.rs  v8.rs  window.rs
zaplib/main/cef/src/app/: browser_process_handler.rs  command_line.rs  mod.rs  render_process_handler.rs
zaplib/main/cef/src/client/: context_menu_handler.rs  display_handler.rs  life_span_handler.rs  mod.rs  render_handler.rs  request.rs  request_handler.rs  resource_handler.rs  resource_request_handler.rs  response.rs
zaplib/main/cef/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
zaplib/main/cef/src/types/: color.rs  mod.rs  point.rs  range.rs  rect.rs  size.rs  string.rs
zaplib/main/shader_compiler/: Cargo.toml  README.md
zaplib/main/shader_compiler/src/: analyse.rs  builtin.rs  code_fragment.rs  const_eval.rs  dep_analyse.rs  detok.rs  env.rs  error.rs  generate.rs  generate_glsl.rs  generate_hlsl.rs  generate_metal.rs  generate_shader_ast.rs  ident.rs  lex.rs  lhs_check.rs  lib.rs  lit.rs  math.rs  shaderast.rs  shaderparser.rs  span.rs  swizzle.rs  token.rs  ty.rs  ty_check.rs  util.rs  val.rs
zaplib/main/shader_compiler/tests/: test.rs
zaplib/main/src/: animator.rs  area.rs  byte_extract.rs  cast.rs  cef_browser.rs  cef_utils.rs  colors.rs  component_id.rs  cube_ins.rs  cursor.rs  cx.rs  cx_apple.rs  cx_cocoa.rs  cx_desktop.rs  cx_dx11.rs  cx_linux.rs  cx_macos.rs  cx_metal.rs  cx_opengl.rs  cx_wasm32.rs  cx_web.rs  cx_webgl.rs  cx_win32.rs  cx_windows.rs  cx_xlib.rs  debug_log.rs  debugger.rs  draw_tree.rs  events.rs  fonts.rs  geometry.rs  hash.rs  image_ins.rs  layout.rs  layout_api.rs  layout_internal.rs  lib.rs  macros.rs  menu.rs  param.rs  (+15 more)
zaplib/main/vector/: Cargo.toml  README.md
zaplib/main/vector/src/: lib.rs
zaplib/main/vector/src/font/: font.rs  horizontal_metrics.rs  mod.rs  outline.rs  outline_point.rs
zaplib/main/vector/src/geometry/: affine_transformation.rs  f32_ext.rs  line_segment.rs  linear_transformation.rs  mod.rs  point.rs  quadratic_segment.rs  rectangle.rs  transform.rs  transformation.rs  trapezoid.rs  vector.rs
zaplib/main/vector/src/internal_iter/: internal_iterator.rs  mod.rs
zaplib/main/vector/src/path/: line_path_iterator.rs  mod.rs  path_command.rs  path_iterator.rs
zaplib/main/vector/src/trapezoidator/: mod.rs
zaplib/main/vector/src/ttf_parser/: mod.rs
zaplib/scripts/: Dockerfile-ci  build_rustdoc.sh  build_website_dev.sh  build_website_prod.sh  clippy.sh  docker_ci_build.sh  server.py  (+4 more)
zaplib/test_suite/: Cargo.toml  index.html
zaplib/test_suite/src/: main.rs
zaplib/web/test_suite/: Cargo.toml  index.html  test_helpers.ts  test_suite.ts  test_suite_worker.ts  zap_buffer_test.ts
zaplib/web/test_suite/src/: main.rs
(+227 files in other folders)
