[workspace]
resolver = "2"
members = [
    "zaplib/cargo-zaplib",
    "zaplib/ci",
    "zaplib/examples/benchmark_json/zaplib",
    "zaplib/examples/example_bigedit",
    "zaplib/examples/example_bigedit/http",
    "zaplib/examples/example_bigedit/hub",
    "zaplib/examples/example_bigedit/macrolib",
    "zaplib/examples/example_bigedit/microserde",
    "zaplib/examples/example_bigedit/microserde/derive",
    "zaplib/examples/example_charts",
    "zaplib/examples/example_image",
    "zaplib/examples/example_lots_of_buttons",
    "zaplib/examples/example_shader",
    "zaplib/examples/example_single_button",
    "zaplib/examples/example_text",
    "zaplib/examples/example_lightning",
    "zaplib/examples/test_bottom_bar",
    "zaplib/examples/test_geometry",
    "zaplib/examples/test_layout",
    "zaplib/examples/test_many_quads",
    "zaplib/examples/test_multithread",
    "zaplib/examples/test_padding",
    "zaplib/examples/test_popover",
    "zaplib/examples/test_shader_2d_primitives",
    "zaplib/examples/tutorial_hello_world_console",
    "zaplib/examples/tutorial_hello_thread",
    "zaplib/examples/tutorial_hello_world_canvas",
    "zaplib/examples/tutorial_2d_rendering/step1",
    "zaplib/examples/tutorial_2d_rendering/step2",
    "zaplib/examples/tutorial_2d_rendering/step3",
    "zaplib/examples/tutorial_js_rust_bridge",
    "zaplib/examples/tutorial_3d_rendering/step2",
    "zaplib/examples/tutorial_3d_rendering/step3",
    "zaplib/examples/tutorial_ui_components",
    "zaplib/examples/tutorial_ui_layout",
    "zaplib/web/test_suite",
]
