[package]
name = "cargo-zaplib"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Zaplib/zaplib"
repository = "https://github.com/Zaplib/zaplib"
description = "Cargo extensions for Zaplib"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
