[package]
name = "cargo-zaplib"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Zaplib/zaplib"
repository = "https://github.com/Zaplib/zaplib"
description = "Cargo extensions for Zaplib"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = "3.0.13"
actix-web = { version = "4.0.0-rc.3", features=["openssl"] }
# Pinning transitive dependency - new builds of actix-http are currently broken upsteam
actix-http = "=3.0.0-rc.3"
log = "0.4.14"
env_logger = "0.9.0"
actix-files = "0.6.0-beta.16"
rcgen = "0.9.1"
openssl = "0.10.38"
