[package]
name = "zaplib_components"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Zaplib/zaplib"
repository = "https://github.com/Zaplib/zaplib"
readme = "README.md"
description = "The widget toolkit for Zaplib"

[dependencies]
zaplib = { path="../main", version = "0.0.3" }
