[package]
name = "zaplib"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Zaplib/zaplib"
repository = "https://github.com/Zaplib/zaplib"
readme = "README.md"
description = "⚡ Zaplib is a fast, cross-platform (web+native), GPU-based application framework, written in Rust."

[features]
disable-fonts=[]
tls=["ureq/tls"] # TLS (for HTTPS) doesn't currently work with cross-compilation, so we allow disabling it.
cef=["zaplib_cef"] # Ship a Chromium browser using CEF in the native app.
cef-dev-tools=["cef"] # Show the Chrome DevTools on startup. TODO(JP): should we move this to a keyboard shortcut or so at some point?
cef-debug=["zaplib_cef/debug"] # Use the CEF debug build, and extra verbose logging.
cef-server=["cef"] # Serve web files from the application bundle
cef-bundle=["cef", "cef-server"] # Used when building the app bundle

[dependencies]
zaplib_vector = { path = "./vector", version = "0.0.3" }
zaplib_shader_compiler = { path = "./shader_compiler", version = "0.0.3" }
zaplib_cef = { path = "./cef", version = "0.0.3", optional = true }

[build-dependencies]
vergen = { version = "6", default-features = false, features = ["git"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "2.1.1", default-features = false }
rand = "0.8.4"
flate2 = "1"

[target.aarch64-apple-darwin.dependencies]
zaplib_objc_sys = { path = "./bind/objc-sys", version = "0.0.3" }

[target.x86_64-apple-darwin.dependencies]
zaplib_objc_sys = { path = "./bind/objc-sys", version = "0.0.3" }

[target.x86_64-unknown-linux-gnu.dependencies]
zaplib_glx_sys = { path = "./bind/glx-sys", version = "0.0.3" }
zaplib_x11_sys = { path = "./bind/x11-sys", version = "0.0.3" }
libc = "0.2"
gl = "0.14"
time = "0.1.4"

[target.armv7-unknown-linux-gnueabihf.dependencies]
zaplib_glx_sys = { path = "./bind/glx-sys", version = "0.0.3" }
zaplib_x11_sys = { path = "./bind/x11-sys", version = "0.0.3" }
libc = "0.2"
gl = "0.14"
time = "0.1.4"

[target.x86_64-pc-windows-gnu.dependencies]
wio = "0.2"
time = "0.1.4"

[target.x86_64-pc-windows-gnu.dependencies.winapi]
version = "0.3"
features = ["dwmapi", "libloaderapi", "shellscalingapi", "winuser", "winbase", "d3d11", "d3d11sdklayers", "d3dcommon", "d3dcompiler", "dxgi1_2", "dxgiformat", "dxgitype", "winerror"]

[target.x86_64-pc-windows-msvc.dependencies]
wio = "0.2"
time = "0.1.4"

[target.x86_64-pc-windows-msvc.dependencies.winapi]
version = "0.3"
features = ["dwmapi","libloaderapi", "shellscalingapi", "winuser", "winbase", "d3d11", "d3d11sdklayers", "d3dcommon", "d3dcompiler", "dxgi1_2", "dxgiformat", "dxgitype", "winerror"]
