[package]
name = "zaplib_shader_compiler"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Zaplib/zaplib"
repository = "https://github.com/Zaplib/zaplib"
readme = "README.md"
description = "The shader compiler for Zaplib"

[dependencies]
lasso = { version = "0.6.0", features=["multi-threaded"] }
once_cell = "1.10.0"
