[package]
name = "test_suite"
version = "0.0.1"
edition = "2021"
publish = false

[features]
# Note that you can also use zaplib-specific features directly, e.g. `zaplib/cef-debug`.

[target.'cfg(target_arch = "wasm32")'.dependencies]
zaplib = { path="../../main" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zaplib = { path="../../main", features=["cef"] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zaplib_components = { path="../../components" }
